app/stylesheets/design/_fr_index.scss
#indexes.year_agency {
  /* popover customizations */
  .tipsy-n .tipsy-inner {
    .popover-title { 
      margin-bottom: 0;
      font-size: 16px;
      border-top: none;
      color: #000;
     }
    .popover-content dl dt { 
      width: 75px;
      text-align: right;
    }
    .popover-content {
      .loading {
        background-position-x: 220px;
        background-position-y: 7px;
        }

      dl dd { width: 445px; }

      dt.significant,
      dt.comment_open,
      dt.comments_received {
        margin-top: 3px;
        height: 15px;
        }
      dt.significant {
        background: sprite-image('icons/icon_significant_entry_index.png', 60px, 0, 50px) no-repeat;
        }
      dt.comment_open {
        background: sprite-image('icons/icon_comment_index_green.png', 60px, 0, 50px) no-repeat;
        }
      dt.comments_received {
        background: sprite-image('icons/icon_comment_index_gray.png', 59px, 0, 50px) no-repeat;
        } 

    }
  }
}

#indexes {
  h1 {
    a { color: $fr_blue; }
    a:hover { color: $fr_orange; }
    }

  .count_pill {
    padding: 1px 7px;
    padding-top: 2px;
    top: -1px;
    position: relative;
    }

  p#agency-jump-nav {
    padding-bottom: 0;

    a.letter_link {
      color: $fr-blue;
      margin: 5px;
      }
    }

  .embedded_search.search_bar {
    label {
      font-size: 1.3em;
      line-height: 19px;
      margin: 0;
      width: 86px;
      margin-right: 10px;
      text-align: right;
    }

    #doc-type-filter {
      left: 293px;
      padding-top: 0px;
      top: -5px;
    }
  }

  #fr-index-metadata,
  #fr-index-agency-metadata { 
    margin-bottom: 30px;
    overflow: hidden;

    h1 { 
      overflow: hidden;
      a.agency { float: left; }
    }
  
    table {
      .entry_count,
      .subject_count { text-align: center; }
      }

    .return_to_index {
      margin-top: 13px;
      font-weight: normal;
      font-size: 13px;
      float: right;
    }
  }

  .index_agencies,
  .entry_type {
    margin-left: 40px;
    width: 880px;

    h3 {
      @extend .header_with_top_border;

      a { 
        text-transform: none;
        float: right;
        font-size: 12px;
        font-weight: normal;
        }
      }

    ul {
      list-style: none;
      margin-left: 40px;
      font-size: 15px;
      font-weight: bold;
      line-height: 22px;
      overflow: hidden;

      li {
        overflow: hidden;
        ul { font-size: 13px; }
      }
    }

    .index_entries { overflow: hidden; }
    h6 {
      margin: 5px 0 0 40px;
      color: #676767;
      clear: both;
      float: left;
      width: 80px;
      font-size: 13px;
      }
    .top_level h6 { margin-left: 80px; }

    a.toc_title { 
      font-weight: bold;
      font-size: 15px;
      float: left;
      }

    .entries_by_month { float: left; }

    dl {
      overflow: hidden;
      margin-bottom: 0px;
      padding-top: 3px;
      font-size: 13px;

      dt {
        font-weight: normal;
        float: left;
        padding-right: 5px;
        }
      dt.with_ajax_popover { clear: both; }

      dd {
        margin-right: 15px;
        margin-left: 0;
        float: left;
        width: 76px;
        }
      dd.pages { width: 140px; }

      dd.significant,
      dd.comment_open,
      dd.comments_received {
        margin-top: 0;
        margin-right: 0;
        height: 15px;
        width: 20px;
        }
      dd.significant {
        background: sprite-image('icons/icon_significant_entry_index.png', 0, 2px, 50px) no-repeat;
        }
      dd.comment_open {
        margin-top: 2px;
        background: sprite-image('icons/icon_comment_index_green.png', 0, 2px, 50px) no-repeat;
        }
      dd.comments_received {
        background: sprite-image('icons/icon_comment_index_gray.png', 0, 2px, 50px) no-repeat;
        }

    }

    .significant,
    .comment_open,
    .comments_received {
      position: relative;
      top: 2px;
      display: inline-block;
      height: 15px;
      width: 16px;
      margin-left: 5px;
      }
    .significant {
      background: sprite-image('icons/icon_significant_entry_index.png', 0, 2px, 50px) no-repeat;
      }
    .comment_open {
      background: sprite-image('icons/icon_comment_index_green.png', 0, 2px, 50px) no-repeat;
      }
    .comments_received {
      background: sprite-image('icons/icon_comment_index_gray.png', 0, 2px, 50px) no-repeat;
      }
    .index_entries { 
      clear: both;
      font-weight: normal;
      display: none;
      }

  }
}

